<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NFC Outlet</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="button_logout">Logout</string>
    <string name="button_qr">Scan</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="httpResponse">Welome, to get started tap your phone on a registered nfc sticker</string>
    <string name="nfc_outlet_descr">Logo</string>
    <string name="logo_descr">Big Logo</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">New to NFCOutlet? Register here</string>
    <string name="tool_name_label"><b>Tool Name:</b></string>
    <string name="tool_id_label"><b>Tool Id:</b></string>
    <string name="tool_descr_label"><b>Tool Description:</b></string>
    <string name="stop_tool_button">Stop Tool</string>
    <string name="tool">Tool</string>

</resources>