<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@layout/alum_repeating">
        <!--Header Start-->
        <LinearLayout
            android:id="@+id/header"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@layout/header_gradient"
            android:paddingTop="5dip"
            android:paddingBottom="5dip">
            	<!-- Logo Start -->
            	<ImageView android:src="@drawable/nfc_outlet"
            	    android:contentDescription="@string/nfc_outlet_descr"
            	    android:layout_width="wrap_content"
            	    android:layout_height="wrap_content"
            	    android:layout_marginLeft="10dip"/>
            	<!-- logo Ends -->
        </LinearLayout>
        <!-- LinearLayout Ends -->  
        
      <!-- Login Form -->

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/header"
       	    android:id="@+id/form"
            android:orientation="vertical"
            android:padding="20dip" >

          <!--  Username Label -->
          <TextView android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#372c24"
                android:text="@string/username"/>
          <EditText android:id="@+id/usernameInput"
              	android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:layout_marginBottom="20dip"
                android:singleLine="true"
                android:inputType="text"/>
          <!--  Password Label -->       
          <TextView android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#372c24"
                android:text="@string/password"/>
          <EditText android:id="@+id/passwordInput"
              	android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:singleLine="true"
                android:inputType="textPassword" />         
          <!-- Login button -->
          <Button android:id="@+id/loginButton"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:text="@string/login"/>
          <!-- Link to Registration Screen -->
          <TextView android:id="@+id/link_to_register"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dip"
                android:layout_marginBottom="10dip"
                android:text="@string/register"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="#0b84aa"/>
 
        </LinearLayout>
        <!-- Login Form Ends -->  
        
        <!-- Footer Start -->

        <RelativeLayout
            android:id="@+id/footer"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@id/form">
            		<!-- Logo Start -->

            		<!-- logo Ends -->

            		<ImageView
            		    android:layout_width="wrap_content"
            		    android:layout_height="wrap_content"
            		    android:layout_centerHorizontal="true"
            		    android:layout_centerVertical="true"
            		    android:paddingLeft="10dip"
            		    android:paddingRight="10dip"
            		    android:paddingBottom="10dip"
            		    android:contentDescription="@string/logo_descr"
            		    android:src="@drawable/diagram" />

        </RelativeLayout>
        <!-- Footer Ends -->
    
	</RelativeLayout>